unpackaged/main/default/objects/n2de__Distribution_event__e/n2de__Distribution_event__e.object-meta.xml
<CustomObject>
    <description>Distribution-related event</description>
    <label>Distribution event</label>
    <pluralLabel>Distribution events</pluralLabel>
</CustomObject>