unpackaged/main/default/objects/n2de__Distribution_event__e/fields/n2de__Assigned_owner__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_owner__c</fullName>
    <description>Assigned user/queue id</description>
    <label>Assigned owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>