unpackaged/main/default/objects/n2de__Distribution_event__e/fields/n2de__Assigned_record_id__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_record_id__c</fullName>
    <label>Assigned record id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>