unpackaged/main/default/objects/n2de__Distribution_event__e/fields/n2de__Assigned_record_name__c.field-meta.xml
<CustomField>
    <fullName>n2de__Assigned_record_name__c</fullName>
    <label>Assigned record name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>