unpackaged/main/default/objects/n2de__Distribution_event__e/fields/n2de__Event_type__c.field-meta.xml
<CustomField>
    <fullName>n2de__Event_type__c</fullName>
    <label>Event type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>